Fix Logarithmic vertical axis has multiple zero labels

Summary:
Vertical axis range is now cropped to the value of precision limit.

BUG: 421105

Reviewers: tbaumgart

Reviewed By: tbaumgart

Tags: #kmymoney

Differential Revision: https://phabricator.kde.org/D29480